--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 #github-logo {
-    filter: invert(41%) sepia(96%) saturate(618%) hue-rotate(333deg) brightness(88%) contrast(77%);
+    filter: invert(99%) sepia(2%) saturate(4545%) hue-rotate(329deg) brightness(93%) contrast(105%);
 }
 
 h2, h3 {
@@ -72,9 +72,19 @@ h2, h3 {
 #left, #right {
     background-color: #ffffff;
     border-radius: 10px;
-    border: 1px solid #CB6040;
+    border: 2px solid #CB6040;
     padding: 5px 30px;
     margin: 20px;
+}
+
+.regButton {
+    background-color: #CB6040;
+    color: #F2E5BF;
+    border-radius: 5px;
+    border: 1px solid #257180;
+    box-shadow: none;
+    padding: 3px;
+    margin: 3px;
 }
 
 #left {
